--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                     <li class="portfolio-list">
                         <div class="portfolio-list-img">
                             <img class="portfolio-img" width="360" height="300" src="./images/a.jpg" alt="Banking App">
-                            <p class="portfolio-text-img"></p>
+                            <p class="portfolio-text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
                         </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Banking App</h3>
@@ -202,7 +203,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-list-img">
                             <img class="portfolio-img" width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
-                            <p class="portfolio-text-img"></p>
+                            <p class="portfolio-text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -212,7 +213,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-list-img">
                             <img class="portfolio-img" width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
-                            <p class="portfolio-text-img"></p>
+                            <p class="portfolio-text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -222,7 +223,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-list-img">
                             <img class="portfolio-img" width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
-                            <p class="portfolio-text-img"></p>
+                            <p class="portfolio-text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -232,7 +233,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-list-img">
                             <img class="portfolio-img" width="360" height="300" src="./images/h.jpg" alt="Online Courses">
-                            <p class="portfolio-text-img"></p>
+                            <p class="portfolio-text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Online Courses</h3>
