--- a/index.html
+++ b/index.html
@@ -246,29 +246,31 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <a class="footer-link" href="/index.html">Web <span class="footer-span">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
-        <div class="container footer-icon-container">
-            <p class="footer-soc-text">Social media</p>
-            <ul class="footer-icon-list">
-                <li class="footer-icon-item"><a href="">
-                    <svg class="svg-soc-item-footer" width="40" height="40">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg></a></li>
-                <li class="footer-icon-item"><a href="">
-                    <svg class="svg-soc-item-footer" width="40" height="40">
-                    <use href="./images/icons.svg#icon-twitter-2"></use>
-                </svg></a></li>
-                <li class="footer-icon-item"><a href="">
-                    <svg class="svg-soc-item-footer" width="40" height="40">
-                    <use href="./images/icons.svg#icon-facebook-2"></use>
-                </svg></a></li>
-                <li class="footer-icon-item"><a href="">
-                    <svg class="svg-soc-item-footer" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin-2"></use>
-                </svg></a></li>
-            </ul>
+            <div class="footer-container-logo">
+                <a class="footer-link" href="/index.html">Web <span class="footer-span">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div class="footer-icon-container">
+                <p class="footer-soc-text">Social media</p>
+                <ul class="footer-icon-list">
+                    <li class="footer-icon-item"><a href="">
+                        <svg class="svg-soc-item-footer" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg></a></li>
+                    <li class="footer-icon-item"><a href="">
+                        <svg class="svg-soc-item-footer" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twitter-2"></use>
+                    </svg></a></li>
+                    <li class="footer-icon-item"><a href="">
+                        <svg class="svg-soc-item-footer" width="40" height="40">
+                        <use href="./images/icons.svg#icon-facebook-2"></use>
+                    </svg></a></li>
+                    <li class="footer-icon-item"><a href="">
+                        <svg class="svg-soc-item-footer" width="40" height="40">
+                        <use href="./images/icons.svg#icon-linkedin-2"></use>
+                    </svg></a></li>
+                </ul>
+            </div>
         </div>
     </footer>
     
