--- a/index.html
+++ b/index.html
@@ -253,21 +253,21 @@
             <div class="footer-icon-container">
                 <p class="footer-soc-text">Social media</p>
                 <ul class="footer-icon-list">
-                    <li class="footer-icon-item"><a href="">
-                        <svg class="svg-soc-item-footer" width="40" height="40">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                    <li class="footer-icon-item"><a class="footer-soc-link" href="" >
+                        <svg class="svg-soc-item-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                     </svg></a></li>
-                    <li class="footer-icon-item"><a href="">
-                        <svg class="svg-soc-item-footer" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twitter-2"></use>
+                    <li class="footer-icon-item"><a class="footer-soc-link" href="" >
+                        <svg class="svg-soc-item-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg></a></li>
-                    <li class="footer-icon-item"><a href="">
-                        <svg class="svg-soc-item-footer" width="40" height="40">
-                        <use href="./images/icons.svg#icon-facebook-2"></use>
+                    <li class="footer-icon-item"><a class="footer-soc-link" href="" >
+                        <svg class="svg-soc-item-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg></a></li>
-                    <li class="footer-icon-item"><a href="">
-                        <svg class="svg-soc-item-footer" width="40" height="40">
-                        <use href="./images/icons.svg#icon-linkedin-2"></use>
+                    <li class="footer-icon-item"><a class="footer-soc-link" href="" >
+                        <svg class="svg-soc-item-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg></a></li>
                 </ul>
             </div>
