--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
                             <ul class="team-list-icon">
-                                <li class="team-item-icon"><a href=""><svg class="icon-soc-list" width="40" height="40">
-                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""><svg class="icon-soc-list" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-instagram-1"></use>
                                         </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                            <use href="./images/icons.svg#icon-twitter-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
                                         </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                            <use href="./images/icons.svg#icon-facebook-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
                                         </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                            <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg> </a></li>
                             </ul>
                         </div>
@@ -114,17 +114,17 @@
                             <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
                             <ul class="team-list-icon">
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-twitter-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-facebook-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                                 </svg> </a></li>
                             </ul>
                         </div>
@@ -135,17 +135,17 @@
                             <h3 class="team-subtitle">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
                             <ul class="team-list-icon">
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-twitter-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-facebook-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                                 </svg> </a></li>
                             </ul>
                         </div>
@@ -156,17 +156,17 @@
                             <h3 class="team-subtitle">Marketing</h3>
                             <p class="team-text">UI Designer</p>
                             <ul class="team-list-icon">
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-twitter-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-facebook-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg> </a></li>
-                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
-                                    <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                <li class="team-item-icon"><a class="team-soc-link" href=""> <svg class="icon-soc-list" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                                 </svg> </a></li>
                             </ul>
                         </div>
