--- a/index.html
+++ b/index.html
@@ -271,8 +271,74 @@
                     </svg></a></li>
                 </ul>
             </div>
+            <div class="footer-subscribe">
+                <p class="text-subscribe">Subscribe</p>
+                <div class="ebutton">
+                    <form class="footer-form">
+                        <input 
+                        type="email" 
+                        class="footer-input"
+                        placeholder="E-mail">
+                    </form>
+                    <button class="button-footer" type="submit">
+                        <p>Subscribe</p>
+                        <svg class="subscribe-icon" height="24" width="24">
+                            <use href="./images/icons.svg#icon-iconsend"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
     </footer>
-    
+    <div class="backdrop">
+        <div class="modal">
+            <button type="button" class="btn-modal">
+                <svg class="modal-close-icom" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="text-modal">Leave your contacts and we will call you back</p>
+            <form class="form-modal">
+                <label class="label-modal">Name
+                    <div class="input-box">
+                        <input type="text" class="input-modal">
+                        <svg class="icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-people"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label class="label-modal">Phone
+                    <div class="input-box">
+                        <input type="tel" class="input-modal">
+                        <svg class="icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-tel"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label class="label-modal">Email
+                    <div class="input-box">
+                        <input type="email" class="input-modal">
+                        <svg class="icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label class="label-modal"> Comment
+                    <textarea 
+                    class="area-modal" 
+                    name="label-modal" 
+                    id="label-modal"
+                    placeholder="Text input"></textarea>
+                </label>
+                <div class="check-box">
+                    <label>
+                        <input type="checkbox" required>
+                    </label>
+                    <p class="check-text">I accept the terms and conditions of the <a class="check-text-link" href="">Privacy Policy</a></p>
+                </div>
+            </form>
+            <button type="submit" class="btn-modal-send">Send</button>
+        </div>
+    </div>
 </body>
 </html>
