--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         placeholder="E-mail">
                     </form>
                     <button class="button-footer" type="submit">
-                        <p>Subscribe</p>
+                        Subscribe
                         <svg class="subscribe-icon" height="24" width="24">
                             <use href="./images/icons.svg#icon-iconsend"></use>
                         </svg>
@@ -299,30 +299,30 @@
             </button>
             <p class="text-modal">Leave your contacts and we will call you back</p>
             <form class="form-modal">
-                <label class="label-modal">Name
-                    <div class="input-box">
-                        <input type="text" class="input-modal">
-                        <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-people"></use>
-                        </svg>
-                    </div>
-                </label>
-                <label class="label-modal">Phone
-                    <div class="input-box">
-                        <input type="tel" class="input-modal">
-                        <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-tel"></use>
-                        </svg>
-                    </div>
-                </label>
-                <label class="label-modal">Email
-                    <div class="input-box">
-                        <input type="email" class="input-modal">
-                        <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-mail"></use>
-                        </svg>
-                    </div>
-                </label>
+                <div class="input-box">
+                    <label class="label-modal">Name
+                            <input type="text" class="input-modal">
+                            <svg class="icon-input" width="18" height="24">
+                                <use href="./images/icons.svg#icon-people"></use>
+                            </svg>  
+                    </label>
+                </div>
+                <div class="input-box">
+                    <label class="label-modal">Phone
+                            <input type="tel" class="input-modal">
+                            <svg class="icon-input" width="18" height="24">
+                                <use href="./images/icons.svg#icon-tel"></use>
+                            </svg>  
+                    </label>
+                </div>
+                <div class="input-box">
+                    <label class="label-modal">Email
+                            <input type="email" class="input-modal">
+                            <svg class="icon-input" width="18" height="24">
+                                <use href="./images/icons.svg#icon-mail"></use>
+                            </svg>
+                    </label>
+                </div>
                 <label class="label-modal"> Comment
                     <textarea 
                     class="area-modal" 
