--- a/index.html
+++ b/index.html
@@ -273,20 +273,20 @@
             </div>
             <div class="footer-subscribe">
                 <p class="text-subscribe">Subscribe</p>
-                <div class="ebutton">
                     <form class="footer-form">
-                        <input 
-                        type="email" 
-                        class="footer-input"
-                        placeholder="E-mail">
+                        <label class="footer-label">
+                            <input 
+                            type="email" 
+                            class="footer-input"
+                            placeholder="E-mail">
+                        </label>
+                        <button class="button-footer" type="submit">
+                            Subscribe
+                            <svg class="subscribe-icon" height="24" width="24">
+                                <use href="./images/icons.svg#icon-iconsend"></use>
+                            </svg>
+                        </button>
                     </form>
-                    <button class="button-footer" type="submit">
-                        Subscribe
-                        <svg class="subscribe-icon" height="24" width="24">
-                            <use href="./images/icons.svg#icon-iconsend"></use>
-                        </svg>
-                    </button>
-                </div>
             </div>
         </div>
     </footer>
