--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                     <form class="footer-form">
                         <label class="footer-label">
                             <input 
+                            name="email"
                             type="email" 
                             class="footer-input"
                             placeholder="E-mail">
