--- a/index.html
+++ b/index.html
@@ -301,28 +301,36 @@
             <p class="text-modal">Leave your contacts and we will call you back</p>
             <form class="form-modal">
                 <div class="input-box">
-                    <label class="label-modal">Name
-                            <input type="text" class="input-modal">
+                    <label 
+                    for="user-name"
+                    class="label-modal">Name 
+                    </label>
+                    <div class=" input-svg-box">
+                        <input type="text" class="input-modal">
                             <svg class="icon-input" width="18" height="24">
                                 <use href="./images/icons.svg#icon-people"></use>
-                            </svg>  
-                    </label>
+                            </svg>
+                    </div>
                 </div>
                 <div class="input-box">
-                    <label class="label-modal">Phone
-                            <input type="tel" class="input-modal">
+                    <label class="label-modal">Phone  
+                    </label>
+                    <div class=" input-svg-box">
+                        <input type="tel" class="input-modal">
                             <svg class="icon-input" width="18" height="24">
                                 <use href="./images/icons.svg#icon-tel"></use>
-                            </svg>  
-                    </label>
+                            </svg>
+                    </div>
                 </div>
                 <div class="input-box">
                     <label class="label-modal">Email
-                            <input type="email" class="input-modal">
+                    </label>
+                    <div class=" input-svg-box">
+                        <input type="email" class="input-modal">
                             <svg class="icon-input" width="18" height="24">
                                 <use href="./images/icons.svg#icon-mail"></use>
                             </svg>
-                    </label>
+                    </div>
                 </div>
                 <label class="label-modal"> Comment
                     <textarea 
