--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     class="label-modal">Name 
                     </label>
                     <div class=" input-svg-box">
-                        <input type="text" class="input-modal">
+                        <input type="text" class="input-modal user-name">
                             <svg class="icon-input" width="18" height="24">
                                 <use href="./images/icons.svg#icon-people"></use>
                             </svg>
