--- a/index.html
+++ b/index.html
@@ -306,7 +306,11 @@
                     class="label-modal">Name 
                     </label>
                     <div class=" input-svg-box">
-                        <input type="text" class="input-modal user-name">
+                        <input 
+                        type="text" 
+                        class="input-modal user-name"
+                        id="user-name"
+                        name="user-name">
                             <svg class="icon-input" width="18" height="24">
                                 <use href="./images/icons.svg#icon-people"></use>
                             </svg>
