--- a/index.html
+++ b/index.html
@@ -349,13 +349,16 @@
                     </div>
                 </div>
                 <div class="textarea-box">
-                    <label class="label-modal"> Comment
-                        <textarea 
-                        class="area-modal" 
-                        name="label-modal" 
-                        id="label-modal"
-                        placeholder="Text input"></textarea>
-                    </label>
+                    <label 
+                    for="user-comment"
+                    class="label-modal"> Comment
+                     </label>
+                    <textarea 
+                    class="area-modal" 
+                    name="user-comment" 
+                    id="user-comment" 
+                    placeholder="Text input">
+                </textarea>
                 </div>
                 <div class="check-box">
                     <label>
