--- a/index.html
+++ b/index.html
@@ -361,9 +361,20 @@
                 </textarea>
                 </div>
                 <div class="check-box">
-                    <label>
-                        <input type="checkbox" required>
-                    </label>
+                    <input 
+                    type="checkbox"
+                    value="true"
+                    name="user-privacy"
+                    id="user-privacy" 
+                    required
+                    class="chb-input"
+                    visually-hidden>
+                    <label 
+                    for="user-privacy"
+                    class="label-checkbox">
+                    I accept the terms and conditions of the
+                    <span class="span-checkbox"></span>
+                </label>
                     <p class="check-text">I accept the terms and conditions of the <a class="check-text-link" href="">Privacy Policy</a></p>
                 </div>
             </form>
