--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     name="user-privacy"
                     id="user-privacy" 
                     required
-                    class="chb-input">
+                    class="chb-input visually-hidden">
                     <label 
                     for="user-privacy"
                     class="label-checkbox">
