--- a/index.html
+++ b/index.html
@@ -365,19 +365,18 @@
                     type="checkbox"
                     value="true"
                     name="user-privacy"
-                    id="user-privacy" 
-                    required
-                    class="chb-input visually-hidden">
+                    id="user-privacy"
+                    class="modal-check visually-hidden">
                     <label 
                     for="user-privacy"
                     class="label-checkbox">
-                    I accept the terms and conditions of the 
-                    <span class="span-checkbox">
-                        <svg class="icon-ok" width="10" height="8">
-                            <use href="./images/icons.svg#icon-ok"></use>
-                        </svg>
-                    </span>
-                    <a class="check-text-link" href="">Privacy Policy</a>
+                        <span class="span-checkbox">
+                            <svg class="icon-ok" width="10" height="8">
+                                <use href="./images/icons.svg#icon-ok"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the
+                        <a class="check-text-link" href="">Privacy Policy</a>
                     </label>
                 </div>
                 <button type="submit" class="btn-modal-send">Send</button>
