--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="hero hero-back">
             <div class="container hero-container">
                 <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-                <button class="hero-button" type="button">Order Service</button>
+                <button class="hero-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <section class="abaut"> 
@@ -291,9 +291,9 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open" data-modal>
         <div class="modal">
-            <button type="button" class="btn-modal">
+            <button type="button" class="btn-modal" data-modal-close>
                 <svg class="modal-close-icom" width="8" height="8">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
@@ -383,5 +383,6 @@
             </form>
         </div>
     </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
